collega tutti i link a se stesso

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header class="lvmax">
 
         <nav>
-            <a href="">link</a>
-            <a href="">link</a>
-            <a href="">link</a>
+            <a href="./index.html">Donna</a>
+            <a href="./index.html">Uomo</a>
+            <a href="./index.html">Bambini</a>
         </nav>
         <img class="logo" src="./img/boolean-logo.png" alt="logo">
         <div>icone</div>
@@ -108,13 +108,13 @@
         <div>
             <h2>Boolando Srl</h2>
             <nav>
-                <a href="">link</a>
-                <a href="">link</a>
-                <a href="">link</a>
+                <a class="small" href="./index.html">Informativa sulla Privacy</a>
+                <a class="small" href="./index.html">Informazioni legali</a>
+                <a class="small" href="./index.html">Diritto di recesso</a>
             </nav>
         </div>
         <div>
-            <h4>trovaci anche su</h2>
+            <h4>trovaci anche su</h4>
             <section>
                 <a href="">link</a>
                 <a href="">link</a>
